# MarcelRaschke-_-IDE

./: Automation.manifest  BuildAccel.props  MSTest.exe.config  MSTest64.exe.config  Microsoft.VisualStudio.Extensibility.Finalizer.exe.config  Microsoft.VisualStudio.ManagedInterfaces.manifest  Microsoft.VisualStudio.Publish.manifest  Microsoft.VisualStudio.Web.Host.exe.config  PerfWatson2.exe.config  ResponsivenessTrackingManifest.xml  T4VSHostProcess.exe.config  TextTransform.exe.config  TextTransformCore.deps.json  TextTransformCore.runtimeconfig.json  VSFinalizer.exe.config  VSIXInstaller.exe.config  VcxprojReader.exe.config  Visual Assist (Visual Studio).vsk  Visual Basic 6.vsk  Visual Studio Code.vsk  VsGa.Application.pkgdef  VsGa.pkgdef  VsGa.pkgundef  VsWizards.manifest  adodb.manifest  devenv.com  devenv.exe.config  devenv.prf  devenv.sln  devenv.winprf  master.pkgdef  masterX64.PkgUnDef  stanpackage.manifest  vsga.isolation.ini  vsn.exe.config
AddItemTemplateInfo/: WebFolderItemTemplates.xml
Automation/: CSCodeModelExtensibility.tlb.manifest  DebuggerProxy.dll.manifest  DiagnosticsTap.dll.manifest  Microsoft.VisualStudio.CompilerHostObjectsProxy.dll.manifest  Microsoft.VisualStudio.Interop.tlb.manifest  Microsoft.VisualStudio.ProductKeyDialog.tlb.manifest  VBCodeModelExtensibility.tlb.manifest  VSDebug.dll.manifest  (+84 more)
ProjectTemplates/VC/Cross Platform/CMake/CMakeProject/: CMakeLists.txt  CMakeProject.vstemplate  NoSubdirectoryCMakeLists.txt
ProjectTemplates/VC/Cross Platform/CMake/CMakeProject/ProjectName/: CMakeLists.txt  ProjectName.cpp  ProjectName.h
(+3933 files in other folders)
